--- a/src/components/ItemPractice.astro
+++ b/src/components/ItemPractice.astro
@@ -3,9 +3,9 @@ import "../css/base.css";
 import WomanFarmer from "./svgs/WomanFarmer.astro";
 
 export interface Props {
-  title_practice: string;
-  description_practice: string;
-  id_practice: number;
+  title_practice: string | null;
+  description_practice: string | null;
+  id_practice: number | null;
 }
 
 const { title_practice, description_practice, id_practice } = Astro.props;
@@ -17,7 +17,7 @@ const { title_practice, description_practice, id_practice } = Astro.props;
     <h3>{title_practice}</h3>
     <div class="descrption">
       {description_practice}
-      <a href="" class="btn">Iniciar</a>
+      <a href={"/practice/"+id_practice} class="btn">Iniciar</a>
     </div>
   </div>
 </div>
@@ -52,10 +52,9 @@ const { title_practice, description_practice, id_practice } = Astro.props;
     width: 100%;
   }
 
-  .text .descrption .btn{
-    padding: .25rem 1rem;
+  .text .descrption .btn {
+    padding: 0.25rem 1rem;
     color: var(--primary-600);
     background-color: var(--light);
   }
-
 </style>
