--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,10 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout title="Inicio">
-  
+<BaseLayout title="Inicio" >
+    <h1>Inicio</h1>
+    <p>Esta es la página de inicio</p>
 </BaseLayout>
 
-<style>
 
-</style>
+
