Register and login , practice

--- a/src/components/ItemPractice.astro
+++ b/src/components/ItemPractice.astro
@@ -5,10 +5,10 @@ import WomanFarmer from "./svgs/WomanFarmer.astro";
 export interface Props {
   title_practice: string | null;
   description_practice: string | null;
-  id_practice: number | null;
+  id_evaluation: number | null;
 }
 
-const { title_practice, description_practice, id_practice } = Astro.props;
+const { title_practice, description_practice, id_evaluation } = Astro.props;
 ---
 
 <div class="item-practice">
@@ -17,7 +17,7 @@ const { title_practice, description_practice, id_practice } = Astro.props;
     <h3>{title_practice}</h3>
     <div class="descrption">
       {description_practice}
-      <a href={"/practice/"+id_practice} class="btn">Iniciar</a>
+      <a href={"/practice/"+id_evaluation} class="btn">Iniciar</a>
     </div>
   </div>
 </div>
