--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Auth from "../components/Auth.svelte";
 import "../css/base.css";
 
 export interface Props {
@@ -15,6 +16,7 @@ const { title } = Astro.props;
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.svg" />
+    <Auth client:load />
     <title>{title}</title>
   </head>
   <body>
