--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -16,6 +16,7 @@ const isLoggedin = await checkSession(Astro);
 <style>
   :global(html, body) {
     height: 100%;
+    height: 100%;
   }
 
   :global(body) {
