--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,7 @@
 @import "@fontsource/work-sans";
+@import "@fontsource/work-sans/600";
 @import "@fontsource/work-sans/700";
+@import "@fontsource/paytone-one"; 
 
 * {
   box-sizing: border-box;
@@ -77,7 +79,7 @@ img {
 
   --font-heading: "Work Sans", serif;
   --font-body: "Work Sans", sans-serif;
-  --font-decoration: "Work Sans", sans-serif;
+  --font-decoration: "Paytone One", sans-serif;
   --section-padding: 3em;
 }
 
@@ -150,6 +152,10 @@ h3 {
   font-size: 0.75rem;
   font-style: normal;
   font-weight: 500;
+}
+
+.semi-bold {
+  font-weight: 600;
 }
 
 .bold {
