--- a/src/css/form.css
+++ b/src/css/form.css
@@ -124,12 +124,12 @@ input.btn {
   font-weight: 300;
 }
 
-.footer-form .register {
+.flex-row-text {
   display: flex;
   flex-direction: row;
   gap: 0.25rem;
 }
 
-.underline:hover {
+.underline-hover:hover {
   text-decoration: underline;
 }
