--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,6 @@
 @import "@fontsource/work-sans";
 @import "@fontsource/work-sans/700";
+@import "@fontsource/work-sans/600";
 
 * {
   box-sizing: border-box;
