--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,38 +5,49 @@ import User from "./svgs/User.svelte";
 ---
 
 <nav>
-  <ul>
-    <li>
-      <div class="icon">
+  <div class="items">
+
+    <a href="/specialist">
         <Graph />
-      </div>
       <span>Dashboard</span>
-    </li>
-    <li>
-      <div class="icon">
+    </a>
+    <a href="/specialist/practices">
         <Puzzle />
-      </div>
       <span>Prácticas</span>
     </li>
-    <li>
-      <div class="icon">
+    <a href="/specialist/pacients">
         <User />
-      </div>
       <span>Pacientes</span>
-    </li>
-  </ul>
+    </a>
+  </div>
 
   <style>
-    ul {
-      list-style: none;
+    nav{
+      width: 12rem;
     }
 
-    li {
+    .items {
       display: flex;
+      width: 11.25rem;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1rem;
+    }
+
+    .items a {
+      width: 100%;
+      display: flex;
+      padding: 0.5rem 1rem;
       align-items: center;
-      gap: 0.75rem;
-      margin-bottom: 1.5rem;
-      cursor: pointer;
+      gap: 1rem;
+      font-size: 1rem;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 140%; /* 1.4rem */
+    }
+
+    .items a:hover{
+      background: var(--primary-700);
     }
   </style>
 </nav>
